--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vikki_app",
+  "name": "vikki",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,13 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/material-bottom-tabs": "^6.2.13",
+    "@react-navigation/material-top-tabs": "^6.5.3",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/stack": "^6.3.12",
+    "@shopify/flash-list": "1.3.1",
     "expo": "~47.0.9",
+    "expo-sms": "~11.0.0",
     "expo-status-bar": "~1.4.2",
+    "lottie-react-native": "5.1.4",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-pager-view": "6.0.1",
+    "react-native-paper": "^5.2.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
+    "react-native-tab-view": "^3.3.4",
+    "react-native-vector-icons": "^9.2.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/expo": "^33.0.1",
+    "@types/react": "^18.0.28",
+    "@types/react-native": "^0.71.3"
   },
   "private": true
 }
